# QuantRiskOptimization

./: .gitignore  README.md  chart_script.py  chart_script_1.py  requirements.txt  setup.py
backend/: CMakeLists.txt  bindings.cpp  optimize.cpp  optimize.h  risk.cpp  risk.h
data/: sample_portfolio.csv
frontend/: app.py  config.py  optimize.py  risk.py
tests/: test_optimize.py  test_risk.py
